feat: adds item event and adds tag struct
