# app/rest/docs/swagger.yaml
@@ -2,10 +2,8 @@ basePath: /api/v1
 definitions:
   rest.AddItemTagRequest:
     properties:
-      tags:
-        items:
-          type: string
-        type: array
+      tag:
+        type: string
     type: object
   rest.CreateItemRequest:
     properties:
@@ -36,6 +34,8 @@ definitions:
     type: object
   rest.Item:
     properties:
+      code:
+        type: integer
       created_at:
         type: string
       description:
@@ -44,10 +44,16 @@ definitions:
         type: number
       id:
         type: string
+      menu_id:
+        type: string
       name:
         type: string
       price:
         type: number
+      tags:
+        items:
+          $ref: '#/definitions/rest.Tag'
+        type: array
       updated_at:
         type: string
     type: object
@@ -69,6 +75,11 @@ definitions:
           $ref: '#/definitions/rest.Menu'
         type: array
       next_page_token:
+        type: string
+    type: object
+  rest.Tag:
+    properties:
+      name:
         type: string
     type: object
 info:
@@ -245,7 +256,7 @@ paths:
       tags:
       - Item
   /menus/{menu_id}/items/{item_id}/tag:
-    put:
+    post:
       consumes:
       - application/json
       description: Router for add a item tag
